# Sudoku

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
.github/: FUNDING.yml  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
include/: Function.h  Keyboard.h  ListPlayer.h  Player.h  Square.h  Sudoku.h  TimePlay.h
include/lib/: __getch.h  include.h
src/: Function.cpp  ListPlayer.cpp  Player.cpp  Ranking.txt  Square.cpp  Sudoku.cpp  TimePlay.cpp  main.cpp
src/lib/: __getch.cpp
